--- a/vagas/templates/template.html
+++ b/vagas/templates/template.html
@@ -58,7 +58,7 @@
       <div class="row" id="nav-superior">
         <div class="col text-light div-nav-superior">
           <div class="logo-nf nv-sp">
-            <a href="#">
+            <a href="#" class="ms-2">
               <img src="{% static 'images/brasao-nf.png' %}" class="img-fluid">
             </a>
           </div>
@@ -67,7 +67,7 @@
           <div class="linkLogin nv-login">
             {% if not request.user.is_authenticated %}
             <a href="{% url 'autenticacao:login' %}" class="btn my-auto btn-acesso" type="submit">
-              <i class="fa-solid fa-user-check">Login</i>
+              <i class="fa-solid fa-user me-2"></i>LOGIN
             </a>
             {% else %}
             <div class="dropdown">
@@ -97,14 +97,14 @@
         </div>
       </div>
       <div class="row" id="nav-inferior">
-        <div class="col d-flex py-2">
-          <div class="img-logo my-auto ms-3">
+        <div class="col d-flex">
+          <div class="img-logo my-auto">
             <a href="/">
-              <img src="{% static 'images/logo.png' %}" class="img-fluid">
+              <img src="https://teste.pmnf.rj.gov.br/static/images/logo_desenvolvenf_white.png" class="img-fluid">
             </a>
           </div>
           <div class="nv-titulo my-auto ms-4 pt-2">
-            <h1>Subsecretaria de Trabalho e Renda - Casa do Trabalhador</h1>
+            <h1>Subsecretaria de Trabalho e Renda (Casa do Trabalhador) </h1>
           </div>
           <div class="nv-social ms-auto d-flex">
             <div class="d-flex my-auto me-3">
