--- a/vagas/templates/vagas/vagas_disponiveis.html
+++ b/vagas/templates/vagas/vagas_disponiveis.html
@@ -9,10 +9,11 @@
   crossorigin="anonymous"
 ></script>
 <link rel="stylesheet" href="/static/css/template.css">
-{% include 'slide.html' %}
 <div class="row">
-  <div class="col d-flex">
-    <div class="col-lg-8 mx-auto">
+  <div class="col d-flex flex-column">
+{% include 'slide.html' %}
+
+    <div class="">
       <div class="row">
         <div class="col pt-5 text-center">
           <p style="margin-bottom: 10px">
