--- a/vagas/templates/template.html
+++ b/vagas/templates/template.html
@@ -100,7 +100,7 @@
         <div class="col d-flex">
           <div class="img-logo my-auto">
             <a href="/">
-              <img src="https://teste.pmnf.rj.gov.br/static/images/logo_desenvolvenf_white.png" class="img-fluid">
+              <img src="https://desenvolve.novafriburgo.rj.gov.br/static/images/logo_desenvolvenf_white.png" class="img-fluid">
             </a>
           </div>
           <div class="nv-titulo my-auto ms-4 pt-2">
