--- a/vagas/templates/vagas/painel_administrativo.html
+++ b/vagas/templates/vagas/painel_administrativo.html
@@ -17,7 +17,8 @@
 </div>
 <div id="painelMenu" class="col">
   <a class="btn btn-primary" href="{% url 'vagas:vagas_com_candidatos' %}"><i class="fas fa-th-list me-2"></i><span class="mobile_hidden">Vagas com Candidatos</span></a>  
-  <a class="btn btn-primary" href="{% url 'vagas:pesquisar_candidatos' %}"><i class="fas fa-search me-2"></i><span class="mobile_hidden">Procurar candidato</span></a>  <br>
+  <a class="btn btn-primary" href="{% url 'vagas:pesquisar_candidatos' %}"><i class="fas fa-search me-2"></i><span class="mobile_hidden">Procurar candidato</span></a>  
+  <a class="btn btn-primary" href="{% url 'vagas:empresa_info' %}"><i class="fas fa-search me-2"></i><span class="mobile_hidden">Procurar empresa</span></a>
   <a class="btn btn-primary" href="{% url 'vagas:painel_administrativo_excluir_cpf' %}"><i class="fas fa-trash me-2"></i><span class="mobile_hidden">Excluir CPF</span></a>  
   <a class="btn btn-primary" href="{% url 'vagas:indicadores'%}"><i class="fas fa-chart-pie me-2"></i><span class="mobile_hidden">Indicadores</span></a>    
   <a class="btn btn-primary" href="{% url 'vagas:emails'%}"><i class="fas fa-envelope me-2"></i><span class="mobile_hidden">Listar emails</span></a>    
