--- a/vagas/templates/vagas/encaminhamento_online.html
+++ b/vagas/templates/vagas/encaminhamento_online.html
@@ -44,7 +44,7 @@
                     <hr>
                     <b><i class="fab fa-whatsapp me-2"></i>POR WHATSAPP</b>
                     <p style="margin: 10px 30px;">                
-                    O candidato deverá entrar em contato com o whatsapp abaixo: <br>
+                    O candidato deve enviar o seu currículo digital para o whatsapp abaixo: <br>
                     <h1 class="titulo text-dark text-center" style="font-size: 14pt;">0<span id="whatsapp">{{vaga.empresa.whatsapp}}</span></h1>
                     {% endif %}
                     {% if vaga.empresa.contato_email %}
