--- a/vagas/templates/vagas/encaminhamento_online.html
+++ b/vagas/templates/vagas/encaminhamento_online.html
@@ -60,8 +60,16 @@
                     <p style="text-indent:  30px;">                
                         O candidato deverá se encaminhar ao endereço eletrônico abaixo e realizar o cadastro através do link:<br>
                         <a href="{{vaga.empresa.link}}"><h1 class="titulo text-dark text-center" style="font-size: 14pt;">{{vaga.empresa.link}}</h1></a>
+                    </p>    
                     {% endif %}    
                     <hr>  
+                    {% if vaga.observacao != '' %}
+                    <b><i class="fa-solid fa-note-sticky me-2"></i>OBSERVAÇÃO</b>
+                    <p style="text-indent:  30px;">                
+                        <h5 class="titulo text-dark px-4" style="font-size: 11pt; text-indent: 20px;">{{vaga.observacao}}</h5>
+                    </p>
+                    <hr>  
+                    {% endif %}    
                     <p class="text-center" style="margin-top: 30px;">
                         Desde já agradecemos e continuamos a disposição de V. srª para maiores
                          informações<br>no telefone <b>(22)2525-9205</b> ou pelo whatsapp <b>022 99793-5451</b>.
