--- a/vagas/templates/vagas/emails.html
+++ b/vagas/templates/vagas/emails.html
@@ -74,6 +74,8 @@
 			<select name="ano" type="date" class="form-control" id="" style="width: 180px;">
 			  <option selected value='2022'>2022</option>			  
 			  <option value='2023'>2023</option>			  
+			  <option value='2023'>2024</option>	
+			  <option value='2023'>2025</option>	
 			</select>
 		  </span>
 		  
