--- a/vagas/templates/vagas/vagas_disponiveis.html
+++ b/vagas/templates/vagas/vagas_disponiveis.html
@@ -238,7 +238,7 @@
                 <div class="col">
                   <div>
                     <div>
-                      <h4 id="{{forloop.counter}}-cargo" class="cargo">
+                      <h4 id="{{forloop.counter}}-cargo" class="cargo" style="font-size: 3vh;">
                         {% if request.user.is_staff %}{{vaga.empresa}} - {% endif%}{{vaga.cargo}}
                       </h4>
                     </div>
