--- a/vagas/templates/vagas/encaminhar.html
+++ b/vagas/templates/vagas/encaminhar.html
@@ -83,7 +83,7 @@
             {% if vaga.observacao != '' %}
             <p style="margin-top: 30px;">
                 <b>OBS.:</b>
-                {{vaga.observacao}} Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, eligendi. Natus veritatis voluptatibus accusantium maxime voluptatem exercitationem tenetur. Optio quam illum assumenda adipisci cupiditate obcaecati dolorum consectetur quaerat necessitatibus debitis.
+                {{vaga.observacao}}
             </p>
             <p><strong>As informações presentes nesta são de responsabilidade do candidato.</strong></p>
             {% else %}
